Fix minor alignment in Instruction page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,7 @@ footer {
 
   .rules-wrapper {
     background-color: white;
-    margin: 100px 100px 50px 100px;
+    margin: 50px 100px 50px 100px;
   }
 
 }
